# silver-carnival

./: AddressBookEntry.h  Animal.cpp  Animal.h  Appliance.cpp  Appliance.h  CMakeLists.txt  Circle.cpp  Circle.h  Dog.cpp  Dog.h  Employee.cpp  Employee.h  Library.cpp  Library.h  Manager.cpp  Manager.h  Microwave.cpp  Microwave.h  Point.h  QuestionsEtc.txt  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Square.cpp  Square.h  WashingMachine.cpp  WashingMachine.h  main.cpp
