cmake_minimum_required(VERSION 3.30)
project(Practice)

set(CMAKE_CXX_STANDARD 20)

add_executable(Practice main.cpp
        Rectangle.cpp
        Rectangle.h
        Library.cpp
        Library.h
        Animal.cpp
        Animal.h
        Dog.cpp
        Dog.h
        Employee.cpp
        Employee.h
        Manager.cpp
        Manager.h
        Shape.cpp
        Shape.h
        Circle.cpp
        Circle.h
        Square.cpp
        Square.h
        Appliance.cpp
        Appliance.h
        WashingMachine.cpp
        WashingMachine.h
        Microwave.cpp
        Microwave.h
        Point.h
        AddressBookEntry.h
)
